--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/draftjs-to-html": "^0.8.1",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "@types/video.js": "^7.3.46",
     "antd": "^4.22.2",
     "axios": "^0.27.2",
     "babel-jest": "^27.4.2",
@@ -32,12 +36,16 @@
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "echarts": "^5.3.3",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
     "history": "^5.3.0",
+    "html-to-draftjs": "^1.5.0",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "^2.0.6",
     "identity-obj-proxy": "^3.0.0",
@@ -61,6 +69,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^8.0.2",
     "react-refresh": "^0.11.0",
     "react-router": "^6.3.0",
@@ -76,6 +85,7 @@
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.7.4",
+    "video.js": "^7.20.2",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.10.0",
